# github-bot

./: .gitignore  Cargo.toml  default.nix  nixpkgs.nix
src/: main.rs
src/actions/: mod.rs
test_res/: push-event-body.txt
