[package]
name = "github-bot"
version = "0.0.1"
authors = ["Yannik Sander <me@ysndr.de>"]
edition = "2018"

[dependencies]
fake = { version = "2.0", features=['http', 'chrono']}
github-types = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
warp_github_webhook = { git = "https://gitlab.com/ysndr/warp_github_webhook.git", branch = "adapt-warp-0-2" }
